[package]
authors = ["Max Maisel <max.maisel@posteo.de>"]
categories = ["encoding", "hardware-support", "no-std", "parser-implementations"]
description = "A Rust implementation of the CC8488 weather station protocol"
edition = "2021"
keywords = ["CC8488", "Bresser"]
license = "AGPL-3.0-or-later"
name = "ws6in1-proto"
readme = "README.md"
repository = "https://github.com/mmmaisel/ws6in1-proto/"
rust-version = "1.85.0"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder-cursor = { version = "1.0.1", default-features = false }
heapless = { version = "0.8.0", optional = true }
time = { version = "0.3.41", default-features = false, features = ["parsing", "macros"] }

[features]
default = ["std"]
heapless = ["dep:heapless"]
std = ["byteorder-cursor/std"]
